unpackaged/main/default/objects/Book__c/fields/BPrice__c.field-meta.xml
<CustomField>
    <fullName>BPrice__c</fullName>
    <label>BPrice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>