unpackaged/main/default/objects/Book__c/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <label>Challenges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>