unpackaged/main/default/objects/Book__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>language</label>
    <length>17</length>
    <type>Text</type>
</CustomField>